--- a/Back-End/E-commece/src/main/resources/application.properties
+++ b/Back-End/E-commece/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=E-commerce
 spring.datasource.url=jdbc:mysql://localhost:3306/E-commerce?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Ghazi@#$123
+debug=true
 
 # JPA / Hibernate
 spring.jpa.show-sql=true
